err/jarvis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jarvis'...
Compiling './lib/python3.5/site-packages/jarvis/__init__.py'...
***   File "./lib/python3.5/site-packages/jarvis/__init__.py", line 20
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis/agents'...
Listing './lib/python3.5/site-packages/jarvis/agents/launcher'...
Compiling './lib/python3.5/site-packages/jarvis/client.py'...
***   File "./lib/python3.5/site-packages/jarvis/client.py", line 14
    print "CONF JARVIS", dir(conf.jarvis)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jarvis/commands.py'...
***   File "./lib/python3.5/site-packages/jarvis/commands.py", line 31
    print " ".join(args)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis/emacs'...
Compiling './lib/python3.5/site-packages/jarvis/emacs/pseudolisp.py'...
***   File "./lib/python3.5/site-packages/jarvis/emacs/pseudolisp.py", line 15
    print "Invalid option"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/emacs/utils.py'...
***   File "./lib/python3.5/site-packages/jarvis/emacs/utils.py", line 49
    print "USAGE: jarvis_run COMMAND_NAME [DESTINATION_FILE]"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/mainloop.py'...
***   File "./lib/python3.5/site-packages/jarvis/mainloop.py", line 31
    print "INFO", info
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/modulea.py'...
***   File "./lib/python3.5/site-packages/jarvis/modulea.py", line 5
    print dir(self.__class__)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jarvis/osgqt.py'...
***   File "./lib/python3.5/site-packages/jarvis/osgqt.py", line 81
    print traits
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/qt.py'...
***   File "./lib/python3.5/site-packages/jarvis/qt.py", line 36
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis/redis'...
Compiling './lib/python3.5/site-packages/jarvis/redis/base.py'...
***   File "./lib/python3.5/site-packages/jarvis/redis/base.py", line 72
    print "OBJ, CLIENT", obj, clients[i]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/rollbackimporter.py'...
***   File "./lib/python3.5/site-packages/jarvis/rollbackimporter.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis/server'...
Listing './lib/python3.5/site-packages/jarvis/server/tests'...
Listing './lib/python3.5/site-packages/jarvis/server/tests/broker'...
Listing './lib/python3.5/site-packages/jarvis/server/tests/routes'...
Compiling './lib/python3.5/site-packages/jarvis/server/tests/routes/test_routes.py'...
***   File "./lib/python3.5/site-packages/jarvis/server/tests/routes/test_routes.py", line 122
    print "GOT", a
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jarvis/server/utils.py'...
***   File "./lib/python3.5/site-packages/jarvis/server/utils.py", line 37
    print body, base_url
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jarvis/tests'...
Listing './lib/python3.5/site-packages/jarvis/tests/conf'...
Compiling './lib/python3.5/site-packages/jarvis/tracer.py'...
***   File "./lib/python3.5/site-packages/jarvis/tracer.py", line 41
    print msg, "\n", traceback.format_exc()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis/utils'...
Compiling './lib/python3.5/site-packages/jarvis/utils/conf.py'...
***   File "./lib/python3.5/site-packages/jarvis/utils/conf.py", line 51
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jarvis-0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
